--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.1.5",
     "swiper": "^11.2.2"
+    "react-icons": "^5.4.0",
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
